# eMotor-Studio

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: commands.json  fault_codes.json  parameters.json  signals.json
docs/: architecture.md  auto_review_system.md  axdr_l_alignment_summary.md  axdr_l_analysis.md  axdr_l_parameter_mapping.md  axdr_l_protocol_plan.md  axdr_l_signal_mapping.md  code_provenance.md  code_reuse_strategy.md  codex_execution_plan.md  communication_transport_decision.md  function_mapping.md  phase_10_0_dashboard_scope_polish.md  phase_10_10_release_freeze_check.md  phase_10_11_visual_cohesion.md  phase_10_1_parameter_tuning_workflow.md  phase_10_2_premium_ui_system.md  phase_10_3_information_architecture_cleanup.md  phase_10_4_unified_workbench_layout.md  phase_10_5_scope_history_interaction.md  phase_10_6_scope_professionalization.md  phase_10_7_scope_unified_measurement.md  phase_10_8_scope_interaction_workbench_consistency.md  phase_10_9_system_framework_audit.md  phase_6_summary.md  phase_7_1_protocol_confirmation_plan.md  phase_7_axdr_l_hardware_integration_plan.md  phase_8_3_research_engineering_ui_plan.md  phase_9_0_mock_experiment_loop.md  phase_9_1_experiment_export_and_identification_plan.md  phase_9_2_modular_identification_workbench.md  phase_9_3_mock_resistance_identification.md  phase_9_4_mock_inductance_identification.md  phase_9_5_current_loop_pi_suggestion.md  phase_9_6_pi_step_validation.md  phase_9_7_current_loop_tuning_report.md  phase_9_8_experiment_session_package.md  phase_9_9_ui_direction_cleanup.md  (+12 more)
(+36 files in other folders)
