[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emotor-studio"
version = "0.1.0"
description = "Motor-control debugging upper-computer application."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "pyqtgraph>=0.13",
    "numpy>=1.24",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
emotor-studio = "emotor_studio.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
